--- a/infra/config/dev/monitoring-system/alloy/values.yaml
+++ b/infra/config/dev/monitoring-system/alloy/values.yaml
@@ -2,6 +2,6 @@ alloy:
   alloy:
     loki:
       env: dev
-  image:
-    registry: "397926938435.dkr.ecr.eu-west-1.amazonaws.com"
-    repository: eks-addons/grafana/alloy
+  # image:
+  #   registry: "397926938435.dkr.ecr.eu-west-1.amazonaws.com"
+  #   repository: eks-addons/grafana/alloy
