--- a/infra/config/prod/monitoring-system/alloy/values.yaml
+++ b/infra/config/prod/monitoring-system/alloy/values.yaml
@@ -2,6 +2,6 @@ alloy:
   alloy:
     loki:
       env: prod
-  image:
-    registry: "206802406579.dkr.ecr.eu-west-1.amazonaws.com"
-    repository: eks-addons/grafana/alloy
+  # image:
+  #   registry: "206802406579.dkr.ecr.eu-west-1.amazonaws.com"
+  #   repository: eks-addons/grafana/alloy
